full-stack-asset-transfer-guide/infrastructure/sample-network/config/gateway/org1-peer-gateway.yaml
#
# Copyright contributors to the Hyperledgendary Full Stack Asset Transfer project
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
# 	  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: v1
kind: Service
metadata:
  name: org1-peer-gateway
  labels:
    app: org1-peer-gateway
    app.kubernetes.io/instance: fabricpeer
    app.kubernetes.io/managed-by: fabric-operator
    app.kubernetes.io/name: fabric
    creator: fabric
    orgname: Org1MSP
spec:
  # This selector stanza will match on the orgname: label below, distributing connections to all
  # peers matching the org MSP.
  selector:
    # app: org1-peer1
    app.kubernetes.io/instance: fabricpeer
    app.kubernetes.io/managed-by: fabric-operator
    app.kubernetes.io/name: fabric
    creator: fabric
    orgname: Org1MSP
  ports:
    - name: peer-api
      port: 7051
      protocol: TCP
      targetPort: 7051

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: org1-peer-gateway
  annotations:
    # proxy settings handled by Traefik
  labels:
    app: org1-peer-gateway
    app.kubernetes.io/instance: fabricpeer
    app.kubernetes.io/managed-by: fabric-operator
    app.kubernetes.io/name: fabric
    creator: fabric
    orgname: Org1MSP
spec:
  ingressClassName: traefik
  rules:
    - host: test-network-org1-peer-gateway.${WORKSHOP_INGRESS_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: org1-peer-gateway
                port:
                  name: peer-api
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - test-network-org1-peer-gateway.${WORKSHOP_INGRESS_DOMAIN}
